# pos_fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yml  exemplo_uso.py  main.py  openapi.json  pyproject.toml
api/: main.py  models.py  utils.py
api/routers/: llm_router.py  operacoes_router.py
