[project]
name = "pos-fastapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "groq>=1.2.0",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.13",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
